# Calibration-Hyperelasticity

./: .gitignore  DESIGN.md  DEVLOG.md  README.md  calibration_gui.py  desktop_app.py  driver.py  pyproject.toml  qt_app.py  requirement.txt  requirements.txt  streamlit_app.py
.github/workflows/: release.yml
assets/icons/: app.icns  generate_icons.py
backend/: __init__.py  main.py
data/: data.h5
data/Kawabata_1981/: ET.txt  PS.txt  UT.txt
data/Meunier_2008/: ET.txt  PS.txt  UT.txt
data/Treloar_1944/: ET.txt  PS.txt  UT.txt
docs/: releasing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: main.jsx  styles.css
hyperfit/: __init__.py  datasets.py  desktop.py  evaluation.py  kinematics.py  mechanics.py  models.py  network.py  optimizer.py  paths.py  plotting.py  strains.py  zhan.py
hyperfit/api/: __init__.py  app.py  meta.py  service.py  sessions.py  user_data.py  user_models.py
packaging/: HyperelasticCalibration.spec  hyperelastic-calibration-cask.rb  macos_entry.py
scripts/: build-macos.sh  generate-macos-icon.sh  prepare-release.sh
src/: generalized_strains.py  kinematics.py  material_models.py  optimization.py  parallel_springs.py  plotting.py  utils.py  zhan_models.py
src/app/: README.md  __init__.py  catalog.py  formatting.py  state.py  theme.py  workers.py
src/app/pages/: __init__.py
src/app/widgets/: __init__.py
tests/: baseline.json  capture_baseline.py  test_regression.py
