[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperfit"
version = "0.2.0"
description = "Calibration of hyperelastic material models against experimental data"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Chongran Zhao" }]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.9",
    "h5py>=3.8.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
desktop = [
    "pywebview>=5.0",
    "pyobjc-core>=9,<12; python_version < '3.10' and sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=9,<12; python_version < '3.10' and sys_platform == 'darwin'",
    "pyobjc-framework-WebKit>=9,<12; python_version < '3.10' and sys_platform == 'darwin'",
    "pyobjc-framework-security>=9,<12; python_version < '3.10' and sys_platform == 'darwin'",
    "pyobjc-framework-Quartz>=9,<12; python_version < '3.10' and sys_platform == 'darwin'",
]
plot = ["matplotlib>=3.5.0"]
cli = ["tqdm>=4.60.0"]
dev = ["pytest>=7.0"]
release = ["pyinstaller>=6.14,<7"]

[project.scripts]
hyperfit-app = "hyperfit.desktop:main"

[tool.setuptools.packages.find]
include = ["hyperfit*"]

[tool.setuptools.package-data]
hyperfit = ["lebedev/*.txt"]
